src/audiopc_ffi.h

/*
This file is automatically generated by build.rs; DO NOT MANUALLY EDIT!
    Legacy C header retained for compatibility. Primary Dart bindings now use flutter_rust_bridge.
*/

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

int32_t audiopc_default_output_sample_rate(void);

int32_t audiopc_default_output_channels(void);

int32_t audiopc_output_device_count(void);

int32_t audiopc_set_source_path(const char *path);

int32_t audiopc_set_source_url(const char *url);

int32_t audiopc_set_source_memory(const uint8_t *data, int32_t len);

int32_t audiopc_play(void);

int32_t audiopc_pause(void);

int32_t audiopc_stop(void);

int32_t audiopc_set_volume(double volume);

int32_t audiopc_set_lowpass_hz(double hz);

int32_t audiopc_set_max_queue_seconds(int32_t seconds);

int32_t audiopc_get_max_queue_seconds(void);

int32_t audiopc_buffered_samples(void);

int32_t audiopc_buffered_millis(void);

int32_t audiopc_visualizer_available_samples(void);

int32_t audiopc_visualizer_sample_rate(void);

int32_t audiopc_visualizer_channels(void);

int32_t audiopc_copy_visualizer_samples(float *buffer, int32_t max_samples);

int32_t audiopc_is_playing(void);

int32_t audiopc_is_source_loaded(void);

int32_t audiopc_duration_millis(void);

int32_t audiopc_position_millis(void);

void audiopc_seek_millis(int32_t millis);

int32_t audiopc_copy_visualizer_spectrum(float *buffer, int32_t max_bars);

int32_t audiopc_get_metadata(char *buffer, int32_t max_len, const char *path);

int32_t audiopc_get_thumbnail(uint8_t *buffer, int32_t max_len, const char *path);

int32_t audiopc_get_player_state(void);