lib/audiopc_ffi.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:audiopc_ffi/audiopc_ffi.g.dart')
library;

import 'dart:ffi' as ffi;

@ffi.Native<ffi.Int32 Function()>()
external int audiopc_default_output_sample_rate();

@ffi.Native<ffi.Int32 Function()>()
external int audiopc_default_output_channels();

@ffi.Native<ffi.Int32 Function()>()
external int audiopc_output_device_count();

@ffi.Native<ffi.Int32 Function(ffi.Pointer<ffi.Char>)>()
external int audiopc_set_source_path(ffi.Pointer<ffi.Char> path);

@ffi.Native<ffi.Int32 Function(ffi.Pointer<ffi.Char>)>()
external int audiopc_set_source_url(ffi.Pointer<ffi.Char> url);

@ffi.Native<ffi.Int32 Function(ffi.Pointer<ffi.Uint8>, ffi.Int32)>()
external int audiopc_set_source_memory(ffi.Pointer<ffi.Uint8> data, int len);

@ffi.Native<ffi.Int32 Function()>()
external int audiopc_play();

@ffi.Native<ffi.Int32 Function()>()
external int audiopc_pause();

@ffi.Native<ffi.Int32 Function()>()
external int audiopc_stop();

@ffi.Native<ffi.Int32 Function(ffi.Double)>()
external int audiopc_set_volume(double volume);

@ffi.Native<ffi.Int32 Function(ffi.Double)>()
external int audiopc_set_lowpass_hz(double hz);

@ffi.Native<ffi.Int32 Function(ffi.Int32)>()
external int audiopc_set_max_queue_seconds(int seconds);

@ffi.Native<ffi.Int32 Function()>()
external int audiopc_get_max_queue_seconds();

@ffi.Native<ffi.Int32 Function()>()
external int audiopc_buffered_samples();

@ffi.Native<ffi.Int32 Function()>()
external int audiopc_buffered_millis();

@ffi.Native<ffi.Int32 Function()>()
external int audiopc_visualizer_available_samples();

@ffi.Native<ffi.Int32 Function()>()
external int audiopc_visualizer_sample_rate();

@ffi.Native<ffi.Int32 Function()>()
external int audiopc_visualizer_channels();

@ffi.Native<ffi.Int32 Function(ffi.Pointer<ffi.Float>, ffi.Int32)>()
external int audiopc_copy_visualizer_samples(
  ffi.Pointer<ffi.Float> buffer,
  int max_samples,
);

@ffi.Native<ffi.Int32 Function()>()
external int audiopc_is_playing();

@ffi.Native<ffi.Int32 Function()>()
external int audiopc_is_source_loaded();

@ffi.Native<ffi.Int32 Function()>()
external int audiopc_duration_millis();

@ffi.Native<ffi.Int32 Function()>()
external int audiopc_position_millis();

@ffi.Native<ffi.Void Function(ffi.Int32)>()
external void audiopc_seek_millis(int millis);

@ffi.Native<ffi.Int32 Function(ffi.Pointer<ffi.Float>, ffi.Int32)>()
external int audiopc_copy_visualizer_spectrum(
  ffi.Pointer<ffi.Float> buffer,
  int max_bars,
);

@ffi.Native<
  ffi.Int32 Function(ffi.Pointer<ffi.Char>, ffi.Int32, ffi.Pointer<ffi.Char>)
>()
external int audiopc_get_metadata(
  ffi.Pointer<ffi.Char> buffer,
  int max_len,
  ffi.Pointer<ffi.Char> path,
);

@ffi.Native<
  ffi.Int32 Function(ffi.Pointer<ffi.Uint8>, ffi.Int32, ffi.Pointer<ffi.Char>)
>()
external int audiopc_get_thumbnail(
  ffi.Pointer<ffi.Uint8> buffer,
  int max_len,
  ffi.Pointer<ffi.Char> path,
);

@ffi.Native<ffi.Int32 Function()>()
external int audiopc_get_player_state();
